[gd_scene load_steps=3 format=2]

[ext_resource path="res://contents/gui/inventory/inventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://contents/gui/trade_window/trade_window.gd" type="Script" id=2]

[node name="TradeWindow" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 757.0
margin_top = 514.0
margin_right = 922.0
margin_bottom = 565.0

[node name="CloseButton" type="Button" parent="VBoxContainer"]
margin_left = 145.0
margin_right = 165.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "X"
align = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 165.0
margin_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PlayerInventory" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
title = "You have"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 70.0
margin_top = 3.0
margin_right = 95.0
margin_bottom = 23.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GiveButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 25.0
margin_bottom = 20.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "->"

[node name="PostInventory" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 99.0
margin_right = 165.0
title = "They want"

[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer3/GiveButton" to="." method="_on_GiveButton_pressed"]
